Minor fixups needed to build as a native VS project
git-svn-id: http://svn.eduke32.com/eduke32@6982 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/source/duke3d/rsrc/buildres.rc
+++ b/source/duke3d/rsrc/buildres.rc
@@ -1,6 +1,6 @@
 #define NEED_COMMCTRL_H
-#include "windows_inc.h"
-#include "startwin.editor.h"
+#include "..\..\build\include\windows_inc.h"
+#include "..\..\build\include\startwin.editor.h"
 
 RSRC_ICON ICON "build_icon.ico"
 RSRC_BMP BITMAP "build.bmp"
