Fix embarrassing Windows-centric fuckup
git-svn-id: http://svn.eduke32.com/eduke32@6986 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/source/duke3d/rsrc/gameres.rc
+++ b/source/duke3d/rsrc/gameres.rc
@@ -1,6 +1,6 @@
 #define NEED_COMMCTRL_H
-#include "..\..\build\include\windows_inc.h"
-#include "..\src\startwin.game.h"
+#include "../../build/include/windows_inc.h"
+#include "../src/startwin.game.h"
 
 RSRC_ICON ICON "game_icon.ico"
 RSRC_BMP BITMAP "game.bmp"
