VS project changes. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@6991 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/platform/Windows/build.vcxproj
+++ b/platform/Windows/build.vcxproj
@@ -315,6 +315,7 @@
     <ClInclude Include="..\..\source\build\include\common.h" />
     <ClInclude Include="..\..\source\build\include\compat.h" />
     <ClInclude Include="..\..\source\build\include\crc32.h" />
+    <ClInclude Include="..\..\source\build\include\debugbreak.h" />
     <ClInclude Include="..\..\source\build\include\dxdidf.h" />
     <ClInclude Include="..\..\source\build\include\dxtfilter.h" />
     <ClInclude Include="..\..\source\build\include\dynamicgtk.h" />
